--- a/PhysPy-wk8_2015S.ipynb
+++ b/PhysPy-wk8_2015S.ipynb
@@ -320,11 +320,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.          0.09999645  0.19999358  0.2999916   0.39999061  0.49999061\n",
+      "  0.5999915   0.69999313  0.79999525  0.89999763  1.        ]\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXUAAAEACAYAAABMEua6AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAERlJREFUeJzt3X+M5Hddx/Hny2shNoDVNKn2eqYEi4KxhGqvjURZpaFn\nMdT4B7XCXUEi/cMi0kZL+YPuP2dsWiMQ9LxiafAXpynEXJOmFYGNBLH0x1350TvsiY13VynyUyUk\n10vf/jHTu+mwuzO7O7Mz3+/3+Ugu3e/MZ7/fTye3n33uZ2b2UlVIktrhB2Y9AUnS5LioS1KLuKhL\nUou4qEtSi7ioS1KLuKhLUouMXNSTfCjJU0m+sMqY9yd5PMmjSV452SlKksY1TqnfBexY6c4kVwI/\nUVUXAm8D9kxobpKkNRq5qFfVp4FvrTLk9cCH+2MfAM5Ocu5kpidJWotJ7KlvBY4OHB8Dzp/AeSVJ\nazSpJ0ozdOzvHpCkGThjAuc4DmwbOD6/f9tzJHGhl6R1qKrhcF7RJEp9P7ALIMllwLer6qkVJuaf\nKm655ZaZz2Fe/vhY+Fj4WJz+88gjxUUXFa97XXH8eO+2tRpZ6kk+ArwaOCfJUeAW4Mz+Ir23qu5N\ncmWSI8B3gbeseRaS1GEnTsDu3bBnD9x+O+zcCRm7zZ9r5KJeVdeMMeb69V1ekrrtwAF485th2zY4\neBDOO29j5/MdpTOwsLAw6ynMDR+L03wsTuvCY3HiBNxyC1xxBdx4I9xzz8YXdICsZ89mXRdKarOu\nJUnzbLDO77hj9cU8CbXJT5RKksYwrTofNImXNEqSRpj03vlKLHVJmqLNqPNBlrokTclm1fkgS12S\nJmyz63yQpS5JEzSLOh9kqUvSBMyyzgdZ6pK0QbOu80GWuiSt07zU+SBLXZLWYZ7qfJClLklrMI91\nPshSl6QxzWudD7LUJWmEea/zQZa6JK2iCXU+yFKXpGU0qc4HWeqSNKRpdT7IUpekvqbW+SBLXZJo\ndp0PstQldVob6nyQpS6ps9pS54MsdUmd07Y6H2SpS+qUNtb5IEtdUie0uc4HWeqSWq/tdT7IUpfU\nWl2p80GWuqRW6lKdD7LUJbVKF+t8kKUuqTW6WueDLHVJjdf1Oh9kqUtqNOv8uSx1SY1knS/PUpfU\nONb5yix1SY1hnY9mqUtqBOt8PCNLPcmOJIeTPJ7kpmXuPyfJfUkOJvlikjdPZaaSOsk6X5tU1cp3\nJluALwOXA8eBB4FrqurQwJhF4PlVdXOSc/rjz62qk0PnqtWuJUnDBuv8jju6uZgnoaoy7vhRpb4d\nOFJVT1TV08A+4KqhMf8FvKj/8YuAbwwv6JK0Ftb5+o3aU98KHB04PgZcOjTmg8AnkzwJvBB4w+Sm\nJ6lr3DvfmFGL+jj7Je8GDlbVQpKXAB9P8oqq+t/hgYuLi6c+XlhYYGFhYQ1TldRmJ07A7t2wZw/c\nfjvs3AkZe9OhPZaWllhaWlr354/aU78MWKyqHf3jm4FnqurWgTH3Arur6jP9408AN1XVQ0Pnck9d\n0rLcO1/ZpPfUHwIuTHJBkucBVwP7h8YcpvdEKknOBX4S+Mr4U5bUVe6dT96q2y9VdTLJ9cD9wBbg\nzqo6lOS6/v17gT8E7kryKL1vEn9QVd+c8rwlNZx759Ox6vbLRC/k9osk3Dtfq7Vuv/iOUkmbxjqf\nPn/3i6Spc+9881jqkqbKOt9clrqkqbDOZ8NSlzRx1vnsWOqSJsY6nz1LXdJEWOfzwVKXtCHW+Xyx\n1CWtm3U+fyx1SWtmnc8vS13Smljn881SlzQW67wZLHVJI1nnzWGpS1qRdd48lrqkZVnnzWSpS3oO\n67zZLHVJp1jnzWepS7LOW8RSlzrOOm8XS13qKOu8nSx1qYOs8/ay1KUOsc7bz1KXOsI67wZLXWo5\n67xbLHWpxazz7rHUpRayzrvLUpdaxjrvNktdagnrXGCpS61gnetZlrrUYNa5hlnqUkNZ51qOpS41\njHWu1VjqUoNY5xrFUpcawDrXuCx1ac5Z51qLkaWeZEeSw0keT3LTCmMWkhxI8sUkSxOfpdRB1rnW\nY9VST7IF+ABwOXAceDDJ/qo6NDDmbOBPgSuq6liSc6Y5YakLrHOt16hS3w4cqaonquppYB9w1dCY\n3wQ+WlXHAKrq65OfptQN1rk2atSe+lbg6MDxMeDSoTEXAmcm+RTwQuB9VfVXk5ui1A3WuSZh1KJe\nY5zjTOBi4DXAWcBnk/xrVT2+0clJXXDiBOzeDXv2wO23w86dkMx6VmqqUYv6cWDbwPE2erU+6Cjw\n9ar6HvC9JP8MvAL4vkV9cXHx1McLCwssLCysfcZSi1jnGra0tMTS0tK6Pz9VK8d4kjOAL9Or8CeB\nzwHXDD1R+lP0nky9Ang+8ABwdVU9NnSuWu1aUpdY5xpXEqpq7L8dq5Z6VZ1Mcj1wP7AFuLOqDiW5\nrn//3qo6nOQ+4PPAM8AHhxd0SadZ55qmVUt9ohey1NVx1rnWY6KlLmkyrHNtFn/3izRFvu5cm81S\nl6bEOtcsWOrShFnnmiVLXZog61yzZqlLE2Cda15Y6tIGWeeaJ5a6tE7WueaRpS6tw8GDvTo//3zr\nXPPFUpfW4Nk6f+1r4YYbrHPNH0tdGpN1riaw1KURrHM1iaUurcI6V9NY6tIyrHM1laUuDbHO1WSW\nutRnnasNLHUJ61ztYamr06xztY2lrs6yztVGlro6Z7DO3/lO61ztYqmrUwbr/MAB2Lp11jOSJstS\nVycsV+cu6GojS12tZ52rSyx1tZZ1ri6y1NVK1rm6ylJXq1jn6jpLXa1hnUuWulrAOpdOs9TVaNa5\n9FyWuhrJOpeWZ6mrcaxzaWWWuhrDOpdGs9TVCNa5NB5LXXPNOpfWxlLX3LLOpbWz1DV3rHNp/UYu\n6kl2JDmc5PEkN60y7pIkJ5P8+mSnqC45eBC2b4eHH+7V+bXXQjLrWUnNseqinmQL8AFgB/By4Jok\nL1th3K3AfYBfgloz61yajFF76tuBI1X1BECSfcBVwKGhcW8H7gYumfQE1X7unUuTM2r7ZStwdOD4\nWP+2U5JspbfQ7+nfVBObnVrNOpcmb1Spj7NAvxd4V1VVkuD2i8ZgnUvTMWpRPw5sGzjeRq/WB/0s\nsK+3nnMO8CtJnq6q/cMnW1xcPPXxwsICCwsLa5+xGu3ECdi9G/bsgdtug127fCJUGrS0tMTS0tK6\nPz9VK8d4kjOALwOvAZ4EPgdcU1XDe+rPjr8LuKeqPrbMfbXatdR+g3W+d691Lo0jCVU1dvqsuqde\nVSeB64H7gceAv6uqQ0muS3LdxqaqrnDvXNo8q5b6RC9kqXeSdS5tzERLXVov61yaDX/3iybOV7ZI\ns2Opa2Ksc2n2LHVNhHUuzQdLXRtinUvzxVLXulnn0vyx1LVm1rk0vyx1rYl1Ls03S11jsc6lZrDU\nNZJ1LjWHpa4VWedS81jqWpZ1LjWTpa7nsM6lZrPUdYp1LjWfpS7rXGoRS73jrHOpXSz1jrLOpXay\n1DvIOpfay1LvEOtcaj9LvSOsc6kbLPWWs86lbrHUW8w6l7rHUm8h61zqLku9Zaxzqdss9ZawziWB\npd4K1rmkZ1nqDWadSxpmqTeUdS5pOZZ6w1jnklZjqTeIdS5pFEu9AaxzSeOy1OecdS5pLSz1OWWd\nS1oPS30OWeeS1stSnyPWuaSNstTnhHUuaRLGKvUkO5IcTvJ4kpuWuf+NSR5N8vkkn0ly0eSn2k7W\nuaRJGlnqSbYAHwAuB44DDybZX1WHBoZ9BfjFqvpOkh3AHcBl05hwm1jnkiZtnFLfDhypqieq6mlg\nH3DV4ICq+mxVfad/+ABw/mSn2S7WuaRpGWdPfStwdOD4GHDpKuPfCty7kUm1mXUuaZrGWdRr3JMl\n+SXgt4BXLXf/4uLiqY8XFhZYWFgY99SNd+IE7N4Ne/bAbbfBrl2QzHpWkubN0tISS0tL6/78VK2+\nZie5DFisqh3945uBZ6rq1qFxFwEfA3ZU1ZFlzlOjrtVWg3W+d691Lml8SaiqsRNwnD31h4ALk1yQ\n5HnA1cD+oYv+OL0F/U3LLehd5d65pM02cvulqk4muR64H9gC3FlVh5Jc179/L/Ae4IeBPentKTxd\nVdunN+355965pFkYuf0ysQt1ZPvFvXNJk7TW7RffUTpB1rmkWfN3v0yAe+eS5oWlvkHWuaR5Yqmv\nk3UuaR5Z6utgnUuaV5b6GljnkuadpT4m61xSE1jqI1jnkprEUl+FdS6paSz1ZVjnkprKUh9inUtq\nMku9zzqX1AaWOta5pPbodKlb55LaprOlbp1LaqPOlbp1LqnNOlXq1rmktutEqVvnkrqi9aU+WOcH\nD8J55816RpI0Pa0t9cE6v+GGXp27oEtqu1aWunUuqataVerWuaSua02pW+eS1IJSt84l6bRGl/qB\nA70637bNOpckaGipP1vnV1wBN95onUvSsxpX6ta5JK2sMaVunUvSaI0odetcksYz16VunUvS2sxt\nqVvnkrR2c1fq1rkkrd9clbp1LkkbMxelbp1L0mTMvNStc0manJGlnmRHksNJHk9y0wpj3t+//9Ek\nrxznwta5JE3eqot6ki3AB4AdwMuBa5K8bGjMlcBPVNWFwNuAPaMueuAAXHIJPPxwr8537YJk3f8P\njbO0tDTrKcwNH4vTfCxO87FYv1Glvh04UlVPVNXTwD7gqqExrwc+DFBVDwBnJzl3uZNZ5z3+hT3N\nx+I0H4vTfCzWb9Se+lbg6MDxMeDSMcacDzw1fLJLLnHvXJKmadSiXmOeZ3jzZNnPu/FG2LmzW1st\nkrSZUrXyup3kMmCxqnb0j28GnqmqWwfG/DmwVFX7+seHgVdX1VND5xr3G4QkaUBVjZ3Co0r9IeDC\nJBcATwJXA9cMjdkPXA/s638T+Pbwgr7WSUmS1mfVRb2qTia5Hrgf2ALcWVWHklzXv39vVd2b5Mok\nR4DvAm+Z+qwlSctadftFktQsU/81AeO8eakrkmxL8qkkX0ryxSS/O+s5zVKSLUkOJLln1nOZpSRn\nJ7k7yaEkj/W3MTspyc39r48vJPnbJM+f9Zw2S5IPJXkqyRcGbvuRJB9P8m9J/jHJ2aPOM9VFfZw3\nL3XM08A7q+qngcuA3+n44/EO4DHGf5VVW70PuLeqXgZcBBya8Xxmov/c3W8DF1fVz9Db8v2NWc5p\nk91Fb60c9C7g41X1UuAT/eNVTbvUx3nzUmdU1Ver6mD/4/+j98XbyVfsJzkfuBL4C77/JbGdkeSH\ngF+oqg9B73msqvrOjKc1K/9DL3zOSnIGcBZwfLZT2jxV9WngW0M3n3pzZ/+/vzbqPNNe1Jd7Y9LW\nKV+zEfpV8krggdnOZGb+BPh94JlZT2TGXgz8d5K7kjyS5INJzpr1pGahqr4J/DHwn/Rebfftqvqn\n2c5q5s4deDXhU8Cy79YfNO1Fves/Vi8ryQuAu4F39Iu9U5L8KvC1qjpAhyu97wzgYuDPqupieq8g\nG/kjdhsleQnwe8AF9H6CfUGSN850UnOkeq9qGbmmTntRPw5sGzjeRq/WOyvJmcBHgb+uqn+Y9Xxm\n5OeB1yf5D+AjwC8n+csZz2lWjgHHqurB/vHd9Bb5Lvo54F+q6htVdRL4GL2/K132VJIfBUjyY8DX\nRn3CtBf1U29eSvI8em9e2j/la86tJAHuBB6rqvfOej6zUlXvrqptVfViek+EfbKqds16XrNQVV8F\njiZ5af+my4EvzXBKs3QYuCzJD/a/Vi6n90R6l+0Hru1/fC0wMgSn+o9krPTmpWlec869CngT8Pkk\nB/q33VxV981wTvOg69t0bwf+ph8+/05H38BXVY/2f2J7iN5zLY8Ad8x2VpsnyUeAVwPnJDkKvAf4\nI+Dvk7wVeAJ4w8jz+OYjSWqPufg3SiVJk+GiLkkt4qIuSS3ioi5JLeKiLkkt4qIuSS3ioi5JLeKi\nLkkt8v8V9rmeNRjyRwAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1026b6290>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "'''\n",
@@ -364,13 +383,21 @@
     "        V[i] = newV\n",
     "        if diff < prev_diff:    \n",
     "            diff = prev_diff\n",
-    "  \n",
-    "            \n",
+    "\n",
     "print V\n",
     "plt.plot(x, V)\n",
     "plt.show()\n",
     "          "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -427,6 +454,137 @@
    "source": [
     "## End of week 8-1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  2.87639902e-02   6.34612909e-01   1.19815605e-02   3.15107953e-01\n",
+      "    8.85907396e-01   6.67582646e-01   1.40717335e-01   6.86336070e-01\n",
+      "    8.45079088e-01   8.65586085e-01]\n",
+      " [  7.94204088e-01   4.42464573e-01   3.72767614e-01   2.13944630e-01\n",
+      "    7.92396604e-01   3.44882719e-01   9.96971543e-01   8.64551432e-01\n",
+      "    6.20973226e-04   2.02649529e-01]\n",
+      " [  1.08313600e-01   1.56961877e-02   3.16771679e-01   2.96963890e-02\n",
+      "    1.19905429e-01   6.04781762e-01   3.81035599e-01   7.67166089e-01\n",
+      "    6.68030278e-01   7.19220170e-01]\n",
+      " [  8.62757714e-01   1.04018068e-01   9.68865705e-01   6.74241160e-01\n",
+      "    4.22002427e-01   5.62007114e-01   6.17875830e-01   9.71070409e-01\n",
+      "    9.08235745e-01   5.85252666e-01]\n",
+      " [  7.85880816e-01   1.25429323e-01   1.39099269e-01   7.81306129e-01\n",
+      "    5.58433335e-01   9.59106405e-01   4.98344556e-01   7.01387853e-01\n",
+      "    6.21870783e-02   1.48427793e-01]\n",
+      " [  2.60783278e-01   1.85252549e-01   5.49660961e-01   2.53678140e-02\n",
+      "    7.02255155e-02   9.66696144e-01   1.09648511e-01   9.25998663e-02\n",
+      "    9.69952568e-02   5.95787628e-01]\n",
+      " [  9.91130322e-01   7.73975335e-01   3.44902366e-01   8.21379507e-01\n",
+      "    4.12249950e-01   4.59098455e-02   6.40423088e-01   2.34186577e-01\n",
+      "    9.54855578e-01   4.33524258e-01]\n",
+      " [  9.79662521e-01   2.25507215e-01   5.37219107e-01   9.42639947e-01\n",
+      "    1.98334503e-01   7.45618797e-01   9.75525705e-01   9.73935679e-01\n",
+      "    1.55399514e-01   8.70457722e-01]\n",
+      " [  1.12748073e-02   9.59982385e-01   8.64585790e-01   3.34840386e-02\n",
+      "    7.61003893e-01   1.09524106e-01   5.10315623e-01   2.67409494e-01\n",
+      "    7.12365662e-01   7.46822209e-01]\n",
+      " [  6.96474762e-01   6.09212320e-01   7.18176907e-01   8.64889116e-01\n",
+      "    3.56474447e-01   5.02465052e-01   8.59732205e-01   9.42354647e-01\n",
+      "    2.34419534e-01   3.68991807e-01]]\n",
+      "[[  0.00000000e+00   1.00000000e+00   1.00000000e+00   1.00000000e+00\n",
+      "    1.00000000e+00   1.00000000e+00   1.00000000e+00   1.00000000e+00\n",
+      "    1.00000000e+00   0.00000000e+00]\n",
+      " [  0.00000000e+00   4.42464573e-01   3.72767614e-01   2.13944630e-01\n",
+      "    7.92396604e-01   3.44882719e-01   9.96971543e-01   8.64551432e-01\n",
+      "    6.20973226e-04   0.00000000e+00]\n",
+      " [  0.00000000e+00   1.56961877e-02   3.16771679e-01   2.96963890e-02\n",
+      "    1.19905429e-01   6.04781762e-01   3.81035599e-01   7.67166089e-01\n",
+      "    6.68030278e-01   0.00000000e+00]\n",
+      " [  0.00000000e+00   1.04018068e-01   9.68865705e-01   6.74241160e-01\n",
+      "    4.22002427e-01   5.62007114e-01   6.17875830e-01   9.71070409e-01\n",
+      "    9.08235745e-01   0.00000000e+00]\n",
+      " [  0.00000000e+00   1.25429323e-01   1.39099269e-01   7.81306129e-01\n",
+      "    5.58433335e-01   9.59106405e-01   4.98344556e-01   7.01387853e-01\n",
+      "    6.21870783e-02   0.00000000e+00]\n",
+      " [  0.00000000e+00   1.85252549e-01   5.49660961e-01   2.53678140e-02\n",
+      "    7.02255155e-02   9.66696144e-01   1.09648511e-01   9.25998663e-02\n",
+      "    9.69952568e-02   0.00000000e+00]\n",
+      " [  0.00000000e+00   7.73975335e-01   3.44902366e-01   8.21379507e-01\n",
+      "    4.12249950e-01   4.59098455e-02   6.40423088e-01   2.34186577e-01\n",
+      "    9.54855578e-01   0.00000000e+00]\n",
+      " [  0.00000000e+00   2.25507215e-01   5.37219107e-01   9.42639947e-01\n",
+      "    1.98334503e-01   7.45618797e-01   9.75525705e-01   9.73935679e-01\n",
+      "    1.55399514e-01   0.00000000e+00]\n",
+      " [  0.00000000e+00   9.59982385e-01   8.64585790e-01   3.34840386e-02\n",
+      "    7.61003893e-01   1.09524106e-01   5.10315623e-01   2.67409494e-01\n",
+      "    7.12365662e-01   0.00000000e+00]\n",
+      " [  0.00000000e+00   1.00000000e+00   1.00000000e+00   1.00000000e+00\n",
+      "    1.00000000e+00   1.00000000e+00   1.00000000e+00   1.00000000e+00\n",
+      "    1.00000000e+00   0.00000000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "from mpl_toolkits.mplot3d import axes3d\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import cm #color map\n",
+    "\n",
+    "# I can use random numbers to initialize the interior points.\n",
+    "from numpy.random import rand\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "NX = 10\n",
+    "NY = 10\n",
+    "\n",
+    "#initialization\n",
+    "V = rand(NX,NY)\n",
+    "\n",
+    "print V\n",
+    "\n",
+    "#Boundary Conditions:\n",
+    "V[0,:] = 1.\n",
+    "V[NY-1,:] = 1.\n",
+    "V[:,0] = 0\n",
+    "V[:,NX-1] = 0\n",
+    "\n",
+    "print V\n",
+    "maxdiff = 1e-6\n",
+    "diff = 1\n",
+    "x = np.arange(NX)\n",
+    "y = np.arange(NY)\n",
+    "\n",
+    "while diff > maxdiff:\n",
+    "    for i in range(1, NX-1):    # start from 1 and end at NX-1: because you don't want to change the BC!!!!  \n",
+    "        for j in range(1, NY-1):\n",
+    "            newV = (V[i, j+1]+V[i, j-1]+V[i+1,j]+V[i-1, j])/4\n",
+    "            diff = abs(newV - V[i,j])\n",
+    "            V[i,j] = newV\n",
+    "\n",
+    "  \n",
+    "            \n",
+    "#print V\n",
+    "#plt.plot(x, V)\n",
+    "\n",
+    "fig = plt.figure(figsize= (15,10))\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "#plt.title(\"Wave Function\")\n",
+    "#plt.suptitle(\"Antisymmetric Spatial Wave Function\")\n",
+    "#x1 = x2 = np.linspace(-1,1,50)\n",
+    "xv, yv  = np.meshgrid(x,y)\n",
+    "#z = antisym(xv,yv) #args.\n",
+    "ax.plot_surface(xv,yv,V, rstride = 1, cstride = 1, cmap=cm.coolwarm, linewidth = 0.2)\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
+    "# A very robust method!"
+   ]
   }
  ],
  "metadata": {
@@ -445,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
