--- a/dolphins.py.ipynb
+++ b/dolphins.py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -15,312 +15,56 @@
       "Carrot was created\n",
       "Kayak was created\n",
       "Tiffany was created\n",
-      "dol.die() =  False 47 1\n",
-      "dol.die() =  False 41 1\n",
-      "dol.die() =  False 37 1\n",
-      "dol.die() =  False 30 1\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 2\n",
-      "dol.die() =  False 41 2\n",
-      "dol.die() =  False 37 2\n",
-      "dol.die() =  False 30 2\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 3\n",
-      "dol.die() =  False 41 3\n",
-      "dol.die() =  False 37 3\n",
-      "dol.die() =  False 30 3\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 4\n",
-      "dol.die() =  False 41 4\n",
-      "dol.die() =  False 37 4\n",
-      "dol.die() =  False 30 4\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 5\n",
-      "dol.die() =  False 41 5\n",
-      "dol.die() =  False 37 5\n",
-      "dol.die() =  False 30 5\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 6\n",
-      "dol.die() =  False 41 6\n",
-      "dol.die() =  False 37 6\n",
-      "dol.die() =  False 30 6\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 7\n",
-      "dol.die() =  False 41 7\n",
-      "dol.die() =  False 37 7\n",
-      "dol.die() =  False 30 7\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 8\n",
-      "dol.die() =  False 41 8\n",
-      "dol.die() =  False 37 8\n",
-      "dol.die() =  False 30 8\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 9\n",
-      "dol.die() =  False 41 9\n",
-      "dol.die() =  False 37 9\n",
-      "dol.die() =  False 30 9\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 10\n",
-      "dol.die() =  False 41 10\n",
-      "dol.die() =  False 37 10\n",
-      "dol.die() =  False 30 10\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 11\n",
-      "dol.die() =  False 41 11\n",
-      "dol.die() =  False 37 11\n",
-      "dol.die() =  False 30 11\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 12\n",
-      "dol.die() =  False 41 12\n",
-      "dol.die() =  False 37 12\n",
-      "dol.die() =  False 30 12\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 13\n",
-      "dol.die() =  False 41 13\n",
-      "dol.die() =  False 37 13\n",
-      "dol.die() =  False 30 13\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 14\n",
-      "dol.die() =  False 41 14\n",
-      "dol.die() =  False 37 14\n",
-      "dol.die() =  False 30 14\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 15\n",
-      "dol.die() =  False 41 15\n",
-      "dol.die() =  False 37 15\n",
-      "dol.die() =  False 30 15\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 16\n",
-      "dol.die() =  False 41 16\n",
-      "dol.die() =  False 37 16\n",
-      "dol.die() =  False 30 16\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 17\n",
-      "dol.die() =  False 41 17\n",
-      "dol.die() =  False 37 17\n",
-      "dol.die() =  False 30 17\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 18\n",
-      "dol.die() =  False 41 18\n",
-      "dol.die() =  False 37 18\n",
-      "dol.die() =  False 30 18\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 19\n",
-      "dol.die() =  False 41 19\n",
-      "dol.die() =  False 37 19\n",
-      "dol.die() =  False 30 19\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 20\n",
-      "dol.die() =  False 41 20\n",
-      "dol.die() =  False 37 20\n",
-      "dol.die() =  False 30 20\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 21\n",
-      "dol.die() =  False 41 21\n",
-      "dol.die() =  False 37 21\n",
-      "dol.die() =  False 30 21\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 22\n",
-      "dol.die() =  False 41 22\n",
-      "dol.die() =  False 37 22\n",
-      "dol.die() =  False 30 22\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 23\n",
-      "dol.die() =  False 41 23\n",
-      "dol.die() =  False 37 23\n",
-      "dol.die() =  False 30 23\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 24\n",
-      "dol.die() =  False 41 24\n",
-      "dol.die() =  False 37 24\n",
-      "dol.die() =  False 30 24\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 25\n",
-      "dol.die() =  False 41 25\n",
-      "dol.die() =  False 37 25\n",
-      "dol.die() =  False 30 25\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 26\n",
-      "dol.die() =  False 41 26\n",
-      "dol.die() =  False 37 26\n",
-      "dol.die() =  False 30 26\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 27\n",
-      "dol.die() =  False 41 27\n",
-      "dol.die() =  False 37 27\n",
-      "dol.die() =  False 30 27\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 28\n",
-      "dol.die() =  False 41 28\n",
-      "dol.die() =  False 37 28\n",
-      "dol.die() =  False 30 28\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 29\n",
-      "dol.die() =  False 41 29\n",
-      "dol.die() =  False 37 29\n",
-      "dol.die() =  False 30 29\n",
-      "['Kayak', 'Tiffany', 'Carrot', 'Jeffery']\n",
-      "dol.die() =  False 47 30\n",
-      "dol.die() =  False 41 30\n",
-      "dol.die() =  False 37 30\n",
-      "dol.die() =  True 30 30\n",
-      "['Kayak', 'Tiffany', 'Carrot']\n",
-      "dol.die() =  False 47 31\n",
-      "dol.die() =  False 41 31\n",
-      "dol.die() =  False 37 31\n",
-      "['Kayak', 'Tiffany', 'Carrot']\n",
-      "dol.die() =  False 47 32\n",
-      "dol.die() =  False 41 32\n",
-      "dol.die() =  False 37 32\n",
-      "['Kayak', 'Tiffany', 'Carrot']\n",
-      "dol.die() =  False 47 33\n",
-      "dol.die() =  False 41 33\n",
-      "dol.die() =  False 37 33\n",
-      "['Kayak', 'Tiffany', 'Carrot']\n",
-      "dol.die() =  False 47 34\n",
-      "dol.die() =  False 41 34\n",
-      "dol.die() =  False 37 34\n",
-      "['Kayak', 'Tiffany', 'Carrot']\n",
-      "dol.die() =  False 47 35\n",
-      "dol.die() =  False 41 35\n",
-      "dol.die() =  False 37 35\n",
-      "['Kayak', 'Tiffany', 'Carrot']\n",
-      "dol.die() =  False 47 36\n",
-      "dol.die() =  False 41 36\n",
-      "dol.die() =  False 37 36\n",
-      "['Kayak', 'Tiffany', 'Carrot']\n",
-      "dol.die() =  False 47 37\n",
-      "dol.die() =  False 41 37\n",
-      "dol.die() =  True 37 37\n",
-      "['Kayak', 'Tiffany']\n",
-      "dol.die() =  False 47 38\n",
-      "dol.die() =  False 41 38\n",
-      "['Kayak', 'Tiffany']\n",
-      "dol.die() =  False 47 39\n",
-      "dol.die() =  False 41 39\n",
-      "['Kayak', 'Tiffany']\n",
-      "dol.die() =  False 47 40\n",
-      "dol.die() =  False 41 40\n",
-      "['Kayak', 'Tiffany']\n",
-      "dol.die() =  False 47 41\n",
-      "dol.die() =  True 41 41\n",
-      "['Kayak']\n",
-      "dol.die() =  False 47 42\n",
-      "['Kayak']\n",
-      "dol.die() =  False 47 43\n",
-      "['Kayak']\n",
-      "dol.die() =  False 47 44\n",
-      "['Kayak']\n",
-      "dol.die() =  False 47 45\n",
-      "['Kayak']\n",
-      "dol.die() =  False 47 46\n",
-      "['Kayak']\n",
-      "dol.die() =  True 47 47\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n",
-      "[]\n"
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "Cannot procreate.\n",
+      "['Carrot', 'Jeffery'] ['Kayak', 'Tiffany']\n",
+      "male\n",
+      "Aabheer\n",
+      "Aabheer was created\n",
+      "Cannot procreate.\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "dictionary changed size during iteration",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-28ba6d3dd5b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    185\u001b[0m         \u001b[0;32mdel\u001b[0m \u001b[0mf_dolph_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdolphin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mmale\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mm_dolph_dic\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    188\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mfemale\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mf_dolph_dic\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m             \u001b[0mcreation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_dolph_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmale\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf_dolph_dic\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfemale\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: dictionary changed size during iteration"
      ]
     }
    ],
@@ -354,7 +98,7 @@
     "        self.sex = sex\n",
     "        self.death = random.gauss(35, 5)\n",
     "        self.age = 0\n",
-    "        self.timeafter = True\n",
+    "        self.timeafter = True #time after procreating \n",
     "        print self.name + ' was created'\n",
     "        \n",
     "    def aging(self):\n",
@@ -426,13 +170,15 @@
     "        male_names.append(string)\n",
     "\n",
     "    #print male_names\n",
+    "    random.shuffle(male_names)\n",
     "\n",
     "    female_names = []\n",
     "    for name in female_name_lst: #same as above\n",
     "        string = name.lstrip('ils\">').rstrip('</s')\n",
     "        female_names.append(string)\n",
-    "\n",
+    "    \n",
     "    #print female_names[20]\n",
+    "    random.shuffle(female_names)\n",
     "    \n",
     "    m=0\n",
     "    f=0\n",
@@ -452,16 +198,20 @@
     "female_generator = name_generator('female')\n",
     "\n",
     "def creation(mother, father):\n",
-    "    if Dolphins.sexy_time(mother, father):\n",
-    "        gender = random.random([male, female])\n",
+    "    if mother.sexy_time(father):\n",
+    "        gender = random.choice(['male', 'female'])\n",
     "        print gender\n",
     "        if gender == 'male':\n",
     "            male_gener = male_generator.next()\n",
     "            print male_gener\n",
-    "            male_gener = Dolphins(male_gener, mother, father, gender)\n",
+    "            male_babyboy = Dolphins(male_gener, mother, father, gender) #creates instance\n",
+    "            return male_babyboy\n",
+    "            #m_dolph_dic[male_babyboy.name] = male_babyboy\n",
     "        else:\n",
     "            female_gener = female_generator.next()\n",
-    "            female_gener = Dolphins(female_gener, mother, father, gender)\n",
+    "            female_babygurl = Dolphins(female_gener, mother, father, gender) #creates instance\n",
+    "            return male_babyboy\n",
+    "            #f_dolph_dic[female_babygurl.name] = female_babygurl\n",
     "            \n",
     "        mother.timeafter = 0\n",
     "        father.timeafter = 0\n",
@@ -478,8 +228,9 @@
     "f_dolph_dic={'Kayak':Kayak, 'Tiffany':Tiffany}\n",
     "dead_dolph_dic={}\n",
     "\n",
-    "for i in range(151):\n",
+    "for i in range(151): #this progresses through 150 years\n",
     "    lst = []\n",
+    "    \n",
     "    #male age dolphins\n",
     "    for dolphin in m_dolph_dic: #Ages dolphins and checks if they are at the age of death\n",
     "        #print dolphin\n",
@@ -505,13 +256,17 @@
     "    for dolphin in lst: #deletes dolphins from dictionary and adds to dead dolph dictionary\n",
     "        dead_dolph_dic[dolphin.name]=dolphin\n",
     "        del f_dolph_dic[dolphin.name]\n",
+    "        \n",
+    "    new_dolphins = {}\n",
     "    \n",
-    "    for male in m_dolp_dic:\n",
-    "        for female in f_dolp_dic:\n",
+    "    for male in m_dolph_dic:\n",
+    "        for female in f_dolph_dic: \n",
+    "            baby = creation(m_dolph_dic[male], f_dolph_dic[female])\n",
+    "            if isinstance #check if it is the string 'cannot procreate' or a dolphin instance\n",
+    "                          #if it is \n",
     "            \n",
-    "    print dolph_dic.keys()\n",
-    "            \n",
-    "        #print Jeffery.age, Carrot.age, Kayak.age, Tiffany.age"
+    "    print m_dolph_dic.keys(), f_dolph_dic.keys()\n",
+    "            "
    ]
   },
   {
